--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "gulp": "^3.9.1",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  }
 }
